{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 92,
  "lineage": "9d122acb-2603-3b42-3a07-c6f833641b51",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu_instance",
      "provider": "module.compute.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005fc0f236362e99f",
            "arn": "arn:aws:ec2:us-east-1:242201285111:instance/i-0cdb491b87e3b67e2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cdb491b87e3b67e2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0228d548fc3ba5481",
            "private_dns": "ip-10-0-1-66.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.66",
            "public_dns": "ec2-54-163-50-213.compute-1.amazonaws.com",
            "public_ip": "54.163.50.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01a7c2e49cf4f3dc6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-027811e0c7bd05e62",
            "tags": {
              "Name": "myproject-public-ec2"
            },
            "tags_all": {
              "Name": "myproject-public-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-005f9b3005ec605a1"
            ]
          },
          "dependencies": [
            "module.compute.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "module.compute.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242201285111:security-group/sg-005f9b3005ec605a1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-005f9b3005ec605a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20241112072727336300000001",
            "name_prefix": "terraform-",
            "owner_id": "242201285111",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myproject-allow-ssh"
            },
            "tags_all": {
              "Name": "myproject-allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-005137e6546e3b87a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.compute.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "module.compute.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242201285111:security-group/sg-06794b45b36291537",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-06794b45b36291537",
            "ingress": [],
            "name": "my-eks-cluster-20241112083843195300000004",
            "name_prefix": "my-eks-cluster-",
            "owner_id": "242201285111",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "my-eks-cluster"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "my-eks-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-005137e6546e3b87a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.compute.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "module.compute.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242201285111:security-group/sg-0cdd3ad8f1c2198c8",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0cdd3ad8f1c2198c8",
            "ingress": [],
            "name": "my-eks-node-20241112083843195300000006",
            "name_prefix": "my-eks-node-",
            "owner_id": "242201285111",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "my-eks-node",
              "kubernetes.io/cluster/my-eks": "owned"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "my-eks-node",
              "kubernetes.io/cluster/my-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-005137e6546e3b87a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.compute.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "module.compute.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-494539485",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06794b45b36291537",
            "security_group_rule_id": "sgr-08de70359903ad6cb",
            "self": false,
            "source_security_group_id": "sg-0cdd3ad8f1c2198c8",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.module.eks.aws_security_group.cluster",
            "module.compute.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1851144598",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06794b45b36291537",
            "security_group_rule_id": "sgr-072082c5e5222835c",
            "self": false,
            "source_security_group_id": "sg-0cdd3ad8f1c2198c8",
            "timeouts": null,
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.module.eks.aws_security_group.cluster",
            "module.compute.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1371619198",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06794b45b36291537",
            "security_group_rule_id": "sgr-0651f0769fababf6a",
            "self": false,
            "source_security_group_id": "sg-0cdd3ad8f1c2198c8",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.module.eks.aws_security_group.cluster",
            "module.compute.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.compute.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "module.compute.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-321393131",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cdd3ad8f1c2198c8",
            "security_group_rule_id": "sgr-00af0be2dfa8bc5d0",
            "self": false,
            "source_security_group_id": "sg-06794b45b36291537",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.module.eks.aws_security_group.cluster",
            "module.compute.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-115408430",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cdd3ad8f1c2198c8",
            "security_group_rule_id": "sgr-0cc741ea5f0a2257a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.module.eks.aws_security_group.cluster",
            "module.compute.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-650198224",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cdd3ad8f1c2198c8",
            "security_group_rule_id": "sgr-0b5efff4c083263bf",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.module.eks.aws_security_group.cluster",
            "module.compute.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-1482627523",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0cdd3ad8f1c2198c8",
            "security_group_rule_id": "sgr-09e6113ec7de4fcd6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.module.eks.aws_security_group.cluster",
            "module.compute.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1484326435",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cdd3ad8f1c2198c8",
            "security_group_rule_id": "sgr-085202c7b462493b1",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.module.eks.aws_security_group.cluster",
            "module.compute.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-702643131",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0cdd3ad8f1c2198c8",
            "security_group_rule_id": "sgr-0e611745588066080",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.module.eks.aws_security_group.cluster",
            "module.compute.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-549455774",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cdd3ad8f1c2198c8",
            "security_group_rule_id": "sgr-0b6a81c236b6011bd",
            "self": false,
            "source_security_group_id": "sg-06794b45b36291537",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.module.eks.aws_security_group.cluster",
            "module.compute.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-451650478",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cdd3ad8f1c2198c8",
            "security_group_rule_id": "sgr-08f1866ccf4be35ab",
            "self": false,
            "source_security_group_id": "sg-06794b45b36291537",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.module.eks.aws_security_group.cluster",
            "module.compute.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-193061745",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cdd3ad8f1c2198c8",
            "security_group_rule_id": "sgr-0e42dd3d2e93ecd7d",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.module.eks.aws_security_group.cluster",
            "module.compute.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1344388962",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0cdd3ad8f1c2198c8",
            "security_group_rule_id": "sgr-07dccdab5a29693a4",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.module.eks.aws_security_group.cluster",
            "module.compute.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.compute.module.eks.module.eks_managed_node_group[\"general\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "module.compute.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242201285111:security-group/sg-05ea73154fd37dd9f",
            "description": "EKS managed node group security group",
            "egress": [],
            "id": "sg-05ea73154fd37dd9f",
            "ingress": [],
            "name": "general-eks-node-group-20241112083843195300000003",
            "name_prefix": "general-eks-node-group-",
            "owner_id": "242201285111",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "general-eks-node-group"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "general-eks-node-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-005137e6546e3b87a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.compute.module.eks.module.eks_managed_node_group[\"general\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "module.compute.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.compute.module.eks.module.eks_managed_node_group[\"spot\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "module.compute.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242201285111:security-group/sg-00833e5492ca89796",
            "description": "EKS managed node group security group",
            "egress": [],
            "id": "sg-00833e5492ca89796",
            "ingress": [],
            "name": "spot-eks-node-group-20241112083843195300000005",
            "name_prefix": "spot-eks-node-group-",
            "owner_id": "242201285111",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "spot-eks-node-group"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "spot-eks-node-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-005137e6546e3b87a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.compute.module.eks.module.eks_managed_node_group[\"spot\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "module.compute.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242201285111:internet-gateway/igw-0979aa8ff2df7f4e8",
            "id": "igw-0979aa8ff2df7f4e8",
            "owner_id": "242201285111",
            "tags": {
              "Name": "myproject-igw"
            },
            "tags_all": {
              "Name": "myproject-igw"
            },
            "vpc_id": "vpc-005137e6546e3b87a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242201285111:route-table/rtb-04c44326515c9347d",
            "id": "rtb-04c44326515c9347d",
            "owner_id": "242201285111",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0979aa8ff2df7f4e8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myproject-public-route-table"
            },
            "tags_all": {
              "Name": "myproject-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-005137e6546e3b87a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fbef0face97d3c96",
            "route_table_id": "rtb-04c44326515c9347d",
            "subnet_id": "subnet-027811e0c7bd05e62"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242201285111:subnet/subnet-0f31f0699e7b71ec4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f31f0699e7b71ec4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242201285111",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myproject-private-subnet"
            },
            "tags_all": {
              "Name": "myproject-private-subnet"
            },
            "vpc_id": "vpc-005137e6546e3b87a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242201285111:subnet/subnet-027811e0c7bd05e62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027811e0c7bd05e62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "242201285111",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myproject-public-subnet"
            },
            "tags_all": {
              "Name": "myproject-public-subnet"
            },
            "vpc_id": "vpc-005137e6546e3b87a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242201285111:vpc/vpc-005137e6546e3b87a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08fb2800c5256838d",
            "default_route_table_id": "rtb-0f06cf1cd0cebe8ca",
            "default_security_group_id": "sg-0677cb3f0b6811425",
            "dhcp_options_id": "dopt-0db8af5f74c02e0c4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-005137e6546e3b87a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f06cf1cd0cebe8ca",
            "owner_id": "242201285111",
            "tags": {
              "Name": "myproject-vpc"
            },
            "tags_all": {
              "Name": "myproject-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}